--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <div id="font-list" class="font-list"> 
         </div>
 
-
+        <div class="font-size">
+            <input id="font-size" class="input">
+        </div>
     </div>
-    <div class="editor" contenteditable></div>
+    <div id="editor" class="editor" contenteditable></div>
     
     <script src="script.js"></script>
 </body>
