--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
         </div>
 
         <div class="font-size">
-            <input id="font-size" class="input">
+            <input type="number" id="font-size" class="input" value="1">
         </div>
+
+        <div class="btn" id="copy">copy</div>
+        <div class="btn" id="paste">paste</div>
+        <div class="btn" id="sel">sel</div>
     </div>
     <div id="editor" class="editor" contenteditable></div>
     
